[package]
name = "iroh-blobs"
version = "0.91.0"
edition = "2021"
description = "content-addressed blobs for iroh"
license = "MIT OR Apache-2.0"
authors = ["dignifiedquire <me@dignifiedquire.com>", "n0 team"]
repository = "https://github.com/n0-computer/iroh-blobs"
keywords = ["hashing", "quic", "blake3", "streaming"]

# Sadly this also needs to be updated in .github/workflows/ci.yml
rust-version = "1.85"

[dependencies]
anyhow = "1.0.95"
bao-tree = { version = "0.15.1", features = [
    "experimental-mixed",
    "tokio_fsm",
    "validate",
    "serde",
], default-features = false }
bytes = { version = "1", features = ["serde"] }
derive_more = { version = "2.0.1", features = [
    "from",
    "try_from",
    "into",
    "debug",
    "display",
    "deref",
    "deref_mut",
] }
futures-lite = "2.6.0"
quinn = { package = "iroh-quinn", version = "0.14.0", optional = true }
n0-future = "0.1.2"
n0-snafu = "0.2.0"
range-collections = { version = "0.4.6", features = ["serde"] }
redb = { version = "=2.4" }
smallvec = { version = "1", features = ["serde", "const_new"] }
snafu = "0.8.5"
tokio = { version = "1.43.0", default-features = false, features = ["sync"] }
tracing = "0.1.41"
iroh-io = "0.6.1"
rand = "0.8.5"
hex = "0.4.3"
serde = "1.0.217"
postcard = { version = "1.1.1", features = ["experimental-derive", "use-std"] }
data-encoding = "2.8.0"
chrono = "0.4.39"
nested_enum_utils = "0.2.1"
ref-cast = "1.0.24"
arrayvec = "0.7.6"
iroh = "0.90"
self_cell = "1.1.0"
genawaiter = { version = "0.99.1", features = ["futures03"] }
iroh-base = "0.90"
reflink-copy = { version = "0.1.24", optional = true }
irpc = { version = "0.5.0", features = [
    "spans",
    "stream",
    "derive",
    "varint-util",
], default-features = false }
iroh-metrics = { version = "0.35" }

[dev-dependencies]
clap = { version = "4.5.31", features = ["derive"] }
hex = "0.4.3"
iroh-test = "0.31.0"
proptest = "1.6.0"
serde_json = "1.0.138"
serde_test = "1.0.177"
tempfile = "3.17.1"
test-strategy = "0.4.0"
testresult = "0.4.1"
tracing-subscriber = { version = "0.3.19", features = ["fmt"] }
tracing-test = "0.2.5"
walkdir = "2.5.0"
iroh = { version = "0.90", features = ["discovery-local-network"] }

[features]
default = ["rpc", "fs-store", "hide-proto-docs"]
hide-proto-docs = []
metrics = []
rpc = ["irpc/rpc", "irpc/quinn_endpoint_setup", "quinn"]
fs = ["tokio/fs", "bao-tree/fs"]
fs-store = ["fs", "reflink-copy"]

[[test]]
name = "blobs"
path = "tests/blobs.rs"
required-features = ["rpc", "fs-store"]

[[test]]
name = "tags"
path = "tests/tags.rs"
required-features = ["rpc", "fs-store"]

[patch.crates-io]
iroh = { git = "https://github.com/n0-computer/iroh.git", branch = "main" }
iroh-base = { git = "https://github.com/n0-computer/iroh.git", branch = "main" }
irpc = { git = "https://github.com/n0-computer/irpc.git", branch = "Frando/varint-feature" }
bao-tree = { git = "https://github.com/n0-computer/bao-tree.git", branch = "Frando/wasm" }
